--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "Shooter",
-  "version": "1.0.1",
-  "description": "Shooter",
-  "author": "www.otrisovano.ru",  
-  "main": "shooter.js",
+  "version": "1.0.0",
+  "description": "Online shooter",
+  "author": "www.otrisovano.ru",
+  "main": "machine.js",
   "scripts": {
-    "backend": "node shooter.js"
+    "start": "node poligon.js"
   },
   "dependencies": {
-    "express": "^4.16.2",
-    "http": "^1",	
-    "socket.io": "^1",	
-    "fs": "^1"
+    "express": "^4.16.3",
+    "http": "^0.0.0",
+    "socket.io": "^2.1.0"
   }
 }
+
